# collab

./: .dockerignore  .env.example  .gitignore  COLLAB_SERVER_PLAN.md  Cargo.toml  Dockerfile.server  LICENSE  README.md  UI_GUIDE.md  compose.yaml  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  versions.json  vite.config.ts  vitest.config.ts
.cargo/: audit.toml
.github/workflows/: build.yml  security-scan.yml  server-container-build.yml
apps/admin-web/: index.html  package.json  vite.config.ts
apps/admin-web/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  styles.css  theme.ts  types.ts  ui.tsx  useAutoRefresh.test.ts  useAutoRefresh.ts
apps/mobile-android/: index.html  tsconfig.json  vite.config.ts  vitest.config.ts
apps/mobile-android/src/: MobileApp.test.tsx  MobileApp.tsx  main.tsx  mobileTauri.circuit.test.ts  mobileTauri.ts  styles.css
crates/collab-circuit/: Cargo.toml  README.md
crates/collab-circuit/src/: compiler.rs  dc.rs  lib.rs  model.rs  sweep.rs
crates/collab-circuit/tests/: compiler_contract.rs
crates/collab-core/: Cargo.toml
crates/collab-core/src/: crypto.rs  hashing.rs  kanban.rs  lib.rs  paths.rs  pdf.rs  references.rs
crates/collab-protocol/: Cargo.toml
crates/collab-replica/: Cargo.toml
crates/collab-replica/src/: models.rs  store.rs
crates/collab-server/: Cargo.toml
crates/collab-server/migrations/: 0001_foundation.sql  0002_authentication_and_admin.sql  0003_native_sessions.sql  0004_primary_admin_and_user_deletion.sql  0005_hosted_vault_foundation.sql  0006_hosted_vault_relational_integrity.sql  0007_hosted_note_index.sql  0008_permissions.sql  0009_pdf_annotations.sql  0010_user_profiles.sql  0011_crdt_documents.sql  0012_hosted_vault_chat.sql  0013_hosted_presence.sql  0014_file_manifest_sequence.sql  0016_vault_offline_policy.sql  0017_offline_copy_capability.sql  0018_logic_components.sql
crates/collab-server/src/: api.rs  app.rs  auth.rs  config.rs  database.rs  lib.rs  main.rs  retention.rs  storage.rs  ws.rs
deploy/: Caddyfile  Caddyfile.tls.example
dist-mobile/: index.html
dist-mobile/assets/: index-85_iBAZV.css  index-BWKfM-j4.css  index-C9EC5JrJ.js  index-C_vaZbh3.css  index-DXfqXAnb.js  index-Dkuto8hO.js  index-DvLr27nO.css  index-KmfMTz6z.js
docs/: android-companion-app-plan.md  android-companion-build.md  android-play-release.md  document-session-collaboration-plan.md  electronic-circuit-simulation-plan.md  flatpak.md  linux-install.md  logic-circuit-diagram-plan.md  macos-install.md  mobile.md  security-advisories.md  versioning-and-releases.md
docs/server/: README.md  admin-web.md  backups.md  container-images.md  deployment-topology.md  development.md  hosted-vault-domain.md  load-testing.md  protocol.md  security-operations.md  security-review.md  tls-and-secrets.md  upgrade-recovery.md  vulnerability-scanning.md  workspace-verification.md
flatpak/: build-in-flatpak.sh  build-local.sh  com.azazel.collab.desktop  com.azazel.collab.metainfo.xml  com.azazel.collab.yml
packaging/aur/collab/: PKGBUILD  (+1 more)
scripts/: build.sh  check-release-version.mjs  dev-frontend.mjs  docker-install-pnpm.mjs  install-trivy.sh  mobile-build-frontend.mjs  mobile-dev-frontend.mjs  prepare-ocr-assets.mjs  server-admin-restore-container.sh  server-backup-container.sh  server-backup-restore-smoke.sh  server-backup.sh  server-backups.sh  server-container-build.sh  server-healthcheck.sh  server-load-test.sh  server-restore-container.sh  server-restore.sh  server-revoke-sessions.sh  server-security-scan.sh  server-smoke.sh  server-upgrade-preflight.sh  sync-versions.mjs  tauri-command.mjs  tauri-command.test.ts
src/: App.css  App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: android.json  default.json
src-tauri/src/: android_jni.rs  crypto.rs  hosted_client.rs  hosted_session.rs  lib.rs  replica.rs  server_token_store.rs
src-tauri/src/commands/: circuit.rs  collab.rs  crypto.rs  files.rs  index.rs  live_ws.rs  mobile.rs  mod.rs  ocr.rs  replica.rs  server.rs  templates.rs  ui.rs  update.rs  vault.rs  watcher.rs  web.rs
src-tauri/src/models/: mod.rs  note.rs  template.rs  vault.rs
src-tauri/src/replica/: mod.rs  models.rs  store.rs
src-tauri/src/state/: app_state.rs  mod.rs
src/contexts/: DragContext.tsx
src/lib/: capabilities.ts  circuitErrorText.test.ts  circuitErrorText.ts  circuitJobRunner.test.ts  circuitJobRunner.ts  circuitSweepExport.test.ts  circuitSweepExport.ts  circuitSweepRunner.test.ts  circuitSweepRunner.ts  collabIdentity.test.ts  collabIdentity.ts  collabTransport.test.ts  collabTransport.ts  conflictedCopy.test.ts  conflictedCopy.ts  documentSession.test.tsx  documentSession.ts  documentSessionController.test.ts  documentSessionController.ts  dragOut.test.ts  dragOut.ts  hostedServers.ts  liveAwareness.test.ts  liveAwareness.ts  liveDebugLog.test.ts  liveDebugLog.ts  liveDocumentSession.test.ts  liveDocumentSession.ts  liveJsonDocument.test.ts  liveJsonDocument.ts  liveSocket.test.ts  liveSocket.ts  logicDiagramExport.test.ts  logicDiagramExport.ts  noteAssets.test.ts  noteAssets.ts  notePdfExport.test.ts  notePdfExport.ts  ocr.test.ts  ocr.ts  (+23 more)
src/store/: collabStore.ts  documentStatusStore.ts  editorStore.test.ts  editorStore.ts  gridStore.ts  noteSnippetStore.test.ts  noteSnippetStore.ts  serverStore.test.ts  serverStore.ts  syncStore.test.ts  syncStore.ts  syncTransferStore.test.ts  syncTransferStore.ts  uiStore.ts  vaultStore.test.ts  vaultStore.ts
src/types/: canvas.ts  circuitRuntime.ts  index.ts  kanban.test.ts  kanban.ts  logicDiagram.test.ts  logicDiagram.ts  nerdamer-all.d.ts  pdf.ts  svg.ts  template.ts  vault.test.ts  vault.ts
src/views/: CanvasPage.test.tsx  CanvasPage.tsx  GraphPage.tsx  ImageView.tsx  KanbanPage.test.tsx  KanbanPage.tsx  LogicDiagramView.test.tsx  LogicDiagramView.tsx  NotePrintView.tsx  NoteView.test.tsx  NoteView.tsx  PdfView.tsx  SettingsPage.tsx  SvgVectorView.tsx  pdfViewSession.test.ts  pdfViewSession.ts  pdfViewUtils.test.ts  pdfViewUtils.ts
(+238 files in other folders)
