[workspace]
resolver = "2"
members = [
  "crates/collab-core",
  "crates/collab-protocol",
  "crates/collab-server",
  "src-tauri",
]

[workspace.package]
version = "0.4.3"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
http-body-util = "0.1"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "migrate", "macros", "uuid", "chrono"] }
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "request-id", "set-header", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
unicode-normalization = "0.1"
zip = "2"
