[package]
name = "collab"
version = "0.5.8"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "collab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2", features = ["v2_40"] }
gtk = "0.18"
glib = "0.18"
gtk-sys = "0.18"
# Both Linux keyring backends: kernel keyutils (silent default) and D-Bus Secret
# Service (durable, opt-in). The backend is chosen at runtime in commands/server.rs.
keyring = { version = "3", features = ["sync-secret-service", "linux-native"] }

[dependencies]
collab-core = { path = "../crates/collab-core" }
collab-protocol = { path = "../crates/collab-protocol" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "6"
notify-debouncer-mini = "0.4"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
thiserror = "1"
parking_lot = "0.12"
fuzzy-matcher = "0.3"
zip = "2"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
scraper = "0.24"
url = "2.5"
regex = "1"
tempfile = "3"
tauri-plugin-drag = "2.1.1"

# Windows/macOS use their native OS keystore (Credential Manager / Keychain),
# which is silent and durable, so they never pull in the D-Bus dependency.
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[dev-dependencies]
httpmock = "0.7"
