[package]
name = "collab-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hex.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
tempfile.workspace = true
