[package]
name = "collab-replica"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
collab-core = { path = "../collab-core" }
collab-protocol = { path = "../collab-protocol" }
chrono.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
