[package]
name = "collab-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
collab-core = { path = "../collab-core" }
collab-protocol = { path = "../collab-protocol" }
futures-util.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
yrs.workspace = true
zip.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tokio-tungstenite.workspace = true
tower.workspace = true
